<resources>
    <string name="app_name">BcaasWallet</string>
    <string name="bcaas_u">BCAAS</string>
    <string name="bcaas_l">bcaas</string>
    <string name="unlock">解锁</string>
    <string name="password">密码</string>
    <string name="create_new_wallet">创建新钱包</string>
    <string name="import_wallet">导入钱包</string>
    <string name="walletinfo_must_not_null">钱包信息不能为空！</string>
    <string name="password_rule">密码至少由八位数字组成</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="remember_password">请牢记密码！</string>
    <string name="account_address">账户地址</string>
    <string name="backup_private_key">备份私钥</string>
    <string name="backup_private_key_detail">这是你钱包的私钥，当密码忘记时，可恢复您的钱包，丢失私钥等于丢失财产。为妥善保存，建议在一张纸上手写下你的私钥信息，以防丢失。</string>
    <string name="finish">完成</string>
    <string name="please_input_password_again">请再次输入密码</string>
    <string name="input_private_key">请输入私钥</string>
    <string name="set_pwd_for_import_wallet">请为导入的钱包设置密码</string>
    <string name="import_wallet_pwd_rule">密码至少由6位带**字符组成</string>
    <string name="confirm_two_pwd_is_consistent">请确认两次密码输入一致！</string>
    <string name="main">首页</string>
    <string name="receive">接收</string>
    <string name="scan">扫描</string>
    <string name="send">发送</string>
    <string name="setting">设置</string>
    <string name="my_account_address">我的账户地址：</string>
    <string name="account_balance">账户余额：</string>
    <string name="pending_transaction">待处理交易</string>
    <string name="receive_account_address">收款账户地址</string>
    <string name="account_address_eg">eg:kjahdgfahjbdfkjahbdnkajbdnkjhbajh==</string>
    <string name="transaction_amount">交易数额</string>
    <string name="input_pwd">请输入密码</string>
    <string name="check_wallet_info">查看钱包信息</string>
    <string name="wallet_info">钱包信息</string>
    <string name="private_key">私钥</string>
    <string name="save_private_key_hint">建议将私钥写在纸上，私密保存</string>
    <string name="email_json">邮件发送Json文件</string>
    <string name="email_json_rule">可通过邮件发送JSON文件(钱包加密文件)，包含私钥，公钥等重要信息，当APP被删除时，可用来重新导入钱包</string>
    <string name="send_email">发送邮件</string>
    <string name="address_name">账户名称</string>
    <string name="address">地址</string>
    <string name="address_eg">eg:asdjbfnkajsdfkjadnsf</string>
    <string name="please_input_address">请输入地址</string>
    <string name="please_input_address_alias">请输入账户别名</string>
    <string name="save">保存</string>
    <string name="insert_address">新增地址</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_authorized_representatives">修改授权代表</string>
    <string name="address_manager">地址管理</string>
    <string name="save_data_failure">保存数据失败!</string>
    <string name="loading">Loading</string>
    <string name="currency">币种：</string>
    <string name="my_account">我的账户</string>
    <string name="balance">余额</string>
    <string name="receive_account">收款账户</string>
    <string name="transaction_detail_key">向***轉帳</string>
    <string name="please_input_transaction_password">请输入交易密码</string>
    <string name="transaction_password">交易密码</string>
    <string name="setpwd">请设置16位字符的密码</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="confirm_pwd_not_null">请确认密码输入不为空！</string>
    <string name="no_wallet">当前没有可用的钱包，请先进行钱包的创建。</string>
    <string name="login_failure">登录失败，请重试！</string>
    <string name="logout">退出登录</string>
    <string name="logout_failure">退出当前账户失败。</string>
    <string name="dataexceptionofaccount">账户数据异常！</string>
    <string name="data_error">获取数据异常。</string>
    <string name="localdata_exception">用户本地数据异常。</string>
    <string name="walletdata_failure">钱包数据获取失败。</string>
    <string name="null_wallet">获取的钱包信息为空。</string>
</resources>
