<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/inc_header" />

    <TextView
        style="@style/black_text_style"
        android:layout_marginLeft="@dimen/d32"
        android:layout_marginRight="@dimen/d32"
        android:layout_marginTop="@dimen/d30"
        android:text="@string/address_name" />

    <EditText
        android:id="@+id/etAddressName"
        style="@style/edittext_style"
        android:layout_marginLeft="@dimen/d32"
        android:layout_marginRight="@dimen/d32"
        android:layout_marginTop="@dimen/d10"
        android:hint="@string/please_input_address_alias" />

    <TextView
        style="@style/black_text_style"
        android:layout_marginLeft="@dimen/d32"
        android:layout_marginRight="@dimen/d32"
        android:layout_marginTop="@dimen/d20"
        android:text="@string/address" />

    <EditText
        android:id="@+id/etAddress"
        style="@style/edittext_style"
        android:layout_marginLeft="@dimen/d32"
        android:layout_marginRight="@dimen/d32"
        android:hint="@string/please_input_address" />

    <TextView
        style="@style/grey_text_style"
        android:layout_marginLeft="@dimen/d32"
        android:layout_marginRight="@dimen/d32"
        android:text="@string/address_eg" />

    <Button
        android:id="@+id/btnSave"
        style="@style/btn_style"
        android:layout_marginLeft="@dimen/d32"
        android:layout_marginRight="@dimen/d32"
        android:layout_marginTop="@dimen/d30"
        android:text="@string/save" />
</LinearLayout>