<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/d40">

    <include layout="@layout/inc_header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d40"
        android:text="@string/set_pwd_for_import_wallet"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_password"
        style="@style/edittext_style"
        android:layout_marginTop="@dimen/d40"
        android:hint="@string/password" />

    <TextView
        android:id="@+id/tv_password_rule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/d4"
        android:text="@string/import_wallet_pwd_rule"
        android:textSize="@dimen/text_size_12" />

    <EditText
        android:id="@+id/et_password_confirm"
        style="@style/edittext_style"
        android:layout_marginTop="@dimen/d20"
        android:hint="@string/please_input_password_again" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d40">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/d0"
            style="@style/btn_style"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_sure"
            android:layout_width="@dimen/d0"
            style="@style/btn_style"
            android:layout_marginLeft="@dimen/d50"
            android:layout_weight="1"
            android:text="@string/sure" />
    </LinearLayout>

</LinearLayout>