<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d0"
        android:layout_weight="1.2">

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/red2"
            android:padding="@dimen/d5"
            android:text="@string/bcaas_u"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_26"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d0"
        android:layout_margin="@dimen/d32"
        android:layout_weight="2">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />

        <Button
            android:id="@+id/btn_unlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_password"
            android:layout_marginTop="@dimen/d20"
            android:text="@string/unlock" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/d0.2"
            android:layout_below="@+id/btn_unlock"
            android:layout_marginTop="@dimen/d20"
            android:background="@color/grey2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_unlock"
            android:layout_marginTop="@dimen/d40">

            <Button
                android:layout_width="@dimen/d0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_new_wallet" />

            <Button
                android:layout_width="@dimen/d0"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d50"
                android:layout_weight="1"
                android:text="@string/import_wallet" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>