<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/d32"
    android:paddingRight="@dimen/d32">

    <TextView
        style="@style/black_text_style"
        android:layout_marginTop="@dimen/d20"
        android:text="@string/my_account_adress" />

    <EditText
        android:id="@+id/etMyAccountAddress"
        style="@style/edittext_style_nofocus"
        android:layout_marginTop="@dimen/d10" />

    <LinearLayout
        android:id="@+id/llTransactionSelectInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/d20"
        android:orientation="vertical">

        <TextView
            style="@style/black_text_style"
            android:text="@string/account_balance" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spSelectDisplayCurrency"
                android:layout_width="@dimen/d0"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d5"
                android:layout_weight="1.1"
                android:background="@drawable/bg_spinner"
                android:dropDownHorizontalOffset="-10dp"
                android:dropDownVerticalOffset="@dimen/d2"
                android:padding="@dimen/d2"
                android:popupBackground="@color/transparent"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/tv_balance"
                style="@style/black_text_style"
                android:layout_width="@dimen/d0"
                android:layout_margin="@dimen/d5"
                android:layout_marginLeft="@dimen/d10"
                android:layout_weight="1"
                android:gravity="center"
                tools:text="2006.855000 " />

            <TextView
                android:id="@+id/tvCurrency"
                style="@style/black_text_style"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/d5"
                tools:text="BCC" />
        </LinearLayout>

        <View
            android:id="@+id/v_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d0.2"
            android:layout_marginTop="@dimen/d10"
            android:background="@color/grey" />

        <TextView
            style="@style/black_text_style"
            android:layout_marginTop="@dimen/d20"
            android:text="@string/receive_account_address" />

        <Spinner
            android:id="@+id/spSelectAccountAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d5"
            android:background="@drawable/bg_spinner_big"
            android:dropDownHorizontalOffset="-10dp"
            android:dropDownVerticalOffset="@dimen/d2"
            android:padding="@dimen/d2"
            android:popupBackground="@color/transparent"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/tv_eg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d5"
            android:text="@string/account_address_eg" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvTransactionAmount"
        style="@style/black_text_style"
        android:layout_marginTop="@dimen/d40"
        android:text="@string/transaction_amount" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d45"
        android:background="@color/transparent"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etTransactionAmount"
            style="@style/edittext_style"
            android:layout_width="@dimen/d0"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical" />

        <Spinner
            android:id="@+id/spSelectReceiveCurrency"
            android:layout_width="@dimen/d0"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d5"
            android:layout_weight="1"
            android:background="@drawable/bg_spinner"
            android:dropDownHorizontalOffset="-10dp"
            android:dropDownVerticalOffset="@dimen/d2"
            android:padding="@dimen/d2"
            android:popupBackground="@color/transparent"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvInputPwd"
        style="@style/black_text_style"
        android:layout_marginTop="@dimen/d40"
        android:text="@string/input_pwd"
        android:visibility="gone" />

    <EditText
        android:id="@+id/etInputPwd"
        style="@style/edittext_style"
        android:layout_marginTop="@dimen/d20"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d40"
        android:background="@drawable/selector_btn_style"
        android:text="@string/send" />

</LinearLayout>